---
source: core/engine/tests/engine.rs
expression: serialized_result
---
performance: "[perf]"
result:
  decisionSummary: Patient is not eligible for clinical trial
  eligibilityReasons:
    - flag: true
      reason: Diagnosis matches trial criteria
    - flag: false
      reason: Excluded comorbidity present
    - flag: false
      reason: Too many prior treatments
    - flag: false
      reason: Patient taking excluded medications
    - flag: false
      reason: Stage IV patients excluded from trial
    - flag: true
      reason: Age within eligible range
  failedCriteria:
    - comorbidity
    - priorTreatment
    - medication
    - stage
  isEligible: false
trace:
  ageEligibility:
    id: ageEligibility
    input:
      patient:
        age:
          "$serde_json::private::Number": "68"
        comorbidities:
          - autoimmune_disease
          - COPD
        currentMedications:
          - immunosuppressants
          - albuterol
          - omeprazole
        diagnosis: lung_cancer
        diseaseStage: IV
        id: P67890
        lastLabResults:
          creatinine:
            "$serde_json::private::Number": "1.2"
          hgb:
            "$serde_json::private::Number": "10.9"
          plt:
            "$serde_json::private::Number": "150"
          wbc:
            "$serde_json::private::Number": "3.8"
        name: John Smith
        priorTreatments:
          "$serde_json::private::Number": "3"
    name: ageEligibility
    order:
      "$serde_json::private::Number": "4"
    output:
      eligibility:
        age:
          flag: true
          reason: Age within eligible range
      patient:
        age:
          "$serde_json::private::Number": "68"
        comorbidities:
          - autoimmune_disease
          - COPD
        currentMedications:
          - immunosuppressants
          - albuterol
          - omeprazole
        diagnosis: lung_cancer
        diseaseStage: IV
        id: P67890
        lastLabResults:
          creatinine:
            "$serde_json::private::Number": "1.2"
          hgb:
            "$serde_json::private::Number": "10.9"
          plt:
            "$serde_json::private::Number": "150"
          wbc:
            "$serde_json::private::Number": "3.8"
        name: John Smith
        priorTreatments:
          "$serde_json::private::Number": "3"
    performance: "[perf]"
    traceData:
      index:
        "$serde_json::private::Number": "1"
      reference_map:
        patient.age:
          "$serde_json::private::Number": "68"
      rule:
        _id: rule2
        "patient.age[age]": ""
  comorbidityEligibility:
    id: comorbidityEligibility
    input:
      patient:
        age:
          "$serde_json::private::Number": "68"
        comorbidities:
          - autoimmune_disease
          - COPD
        currentMedications:
          - immunosuppressants
          - albuterol
          - omeprazole
        diagnosis: lung_cancer
        diseaseStage: IV
        id: P67890
        lastLabResults:
          creatinine:
            "$serde_json::private::Number": "1.2"
          hgb:
            "$serde_json::private::Number": "10.9"
          plt:
            "$serde_json::private::Number": "150"
          wbc:
            "$serde_json::private::Number": "3.8"
        name: John Smith
        priorTreatments:
          "$serde_json::private::Number": "3"
    name: comorbidityEligibility
    order:
      "$serde_json::private::Number": "6"
    output:
      eligibility:
        comorbidity:
          flag: false
          reason: Excluded comorbidity present
      patient:
        age:
          "$serde_json::private::Number": "68"
        comorbidities:
          - autoimmune_disease
          - COPD
        currentMedications:
          - immunosuppressants
          - albuterol
          - omeprazole
        diagnosis: lung_cancer
        diseaseStage: IV
        id: P67890
        lastLabResults:
          creatinine:
            "$serde_json::private::Number": "1.2"
          hgb:
            "$serde_json::private::Number": "10.9"
          plt:
            "$serde_json::private::Number": "150"
          wbc:
            "$serde_json::private::Number": "3.8"
        name: John Smith
        priorTreatments:
          "$serde_json::private::Number": "3"
    performance: "[perf]"
    traceData:
      index:
        "$serde_json::private::Number": "0"
      reference_map:
        "patient.comorbidities ?? []":
          - autoimmune_disease
          - COPD
      rule:
        _id: rule1
        "patient.comorbidities ?? [][comorbidities]": "some($, # in ['autoimmune_disease', 'heart_failure', 'uncontrolled_diabetes'])"
  diagnosisEligibility:
    id: diagnosisEligibility
    input:
      patient:
        age:
          "$serde_json::private::Number": "68"
        comorbidities:
          - autoimmune_disease
          - COPD
        currentMedications:
          - immunosuppressants
          - albuterol
          - omeprazole
        diagnosis: lung_cancer
        diseaseStage: IV
        id: P67890
        lastLabResults:
          creatinine:
            "$serde_json::private::Number": "1.2"
          hgb:
            "$serde_json::private::Number": "10.9"
          plt:
            "$serde_json::private::Number": "150"
          wbc:
            "$serde_json::private::Number": "3.8"
        name: John Smith
        priorTreatments:
          "$serde_json::private::Number": "3"
    name: diagnosisEligibility
    order:
      "$serde_json::private::Number": "1"
    output:
      eligibility:
        diagnosis:
          flag: true
          reason: Diagnosis matches trial criteria
      patient:
        age:
          "$serde_json::private::Number": "68"
        comorbidities:
          - autoimmune_disease
          - COPD
        currentMedications:
          - immunosuppressants
          - albuterol
          - omeprazole
        diagnosis: lung_cancer
        diseaseStage: IV
        id: P67890
        lastLabResults:
          creatinine:
            "$serde_json::private::Number": "1.2"
          hgb:
            "$serde_json::private::Number": "10.9"
          plt:
            "$serde_json::private::Number": "150"
          wbc:
            "$serde_json::private::Number": "3.8"
        name: John Smith
        priorTreatments:
          "$serde_json::private::Number": "3"
    performance: "[perf]"
    traceData:
      index:
        "$serde_json::private::Number": "0"
      reference_map:
        patient.diagnosis: lung_cancer
      rule:
        _id: rule1
        "patient.diagnosis[diagnosis]": "'breast_cancer', 'lung_cancer', 'colorectal_cancer'"
  diseaseStageEligibility:
    id: diseaseStageEligibility
    input:
      patient:
        age:
          "$serde_json::private::Number": "68"
        comorbidities:
          - autoimmune_disease
          - COPD
        currentMedications:
          - immunosuppressants
          - albuterol
          - omeprazole
        diagnosis: lung_cancer
        diseaseStage: IV
        id: P67890
        lastLabResults:
          creatinine:
            "$serde_json::private::Number": "1.2"
          hgb:
            "$serde_json::private::Number": "10.9"
          plt:
            "$serde_json::private::Number": "150"
          wbc:
            "$serde_json::private::Number": "3.8"
        name: John Smith
        priorTreatments:
          "$serde_json::private::Number": "3"
    name: diseaseStageEligibility
    order:
      "$serde_json::private::Number": "2"
    output:
      eligibility:
        stage:
          flag: false
          reason: Stage IV patients excluded from trial
      patient:
        age:
          "$serde_json::private::Number": "68"
        comorbidities:
          - autoimmune_disease
          - COPD
        currentMedications:
          - immunosuppressants
          - albuterol
          - omeprazole
        diagnosis: lung_cancer
        diseaseStage: IV
        id: P67890
        lastLabResults:
          creatinine:
            "$serde_json::private::Number": "1.2"
          hgb:
            "$serde_json::private::Number": "10.9"
          plt:
            "$serde_json::private::Number": "150"
          wbc:
            "$serde_json::private::Number": "3.8"
        name: John Smith
        priorTreatments:
          "$serde_json::private::Number": "3"
    performance: "[perf]"
    traceData:
      index:
        "$serde_json::private::Number": "1"
      reference_map:
        patient.diseaseStage: IV
      rule:
        _id: rule2
        "patient.diseaseStage[stage]": "'IV'"
  eligibilitySummary:
    id: eligibilitySummary
    input:
      eligibility:
        age:
          flag: true
          reason: Age within eligible range
        comorbidity:
          flag: false
          reason: Excluded comorbidity present
        diagnosis:
          flag: true
          reason: Diagnosis matches trial criteria
        medication:
          flag: false
          reason: Patient taking excluded medications
        priorTreatment:
          flag: false
          reason: Too many prior treatments
        stage:
          flag: false
          reason: Stage IV patients excluded from trial
      patient:
        age:
          "$serde_json::private::Number": "68"
        comorbidities:
          - autoimmune_disease
          - COPD
        currentMedications:
          - immunosuppressants
          - albuterol
          - omeprazole
        diagnosis: lung_cancer
        diseaseStage: IV
        id: P67890
        lastLabResults:
          creatinine:
            "$serde_json::private::Number": "1.2"
          hgb:
            "$serde_json::private::Number": "10.9"
          plt:
            "$serde_json::private::Number": "150"
          wbc:
            "$serde_json::private::Number": "3.8"
        name: John Smith
        priorTreatments:
          "$serde_json::private::Number": "3"
    name: eligibilitySummary
    order:
      "$serde_json::private::Number": "7"
    output:
      decisionSummary: Patient is not eligible for clinical trial
      eligibilityReasons:
        - flag: true
          reason: Diagnosis matches trial criteria
        - flag: false
          reason: Excluded comorbidity present
        - flag: false
          reason: Too many prior treatments
        - flag: false
          reason: Patient taking excluded medications
        - flag: false
          reason: Stage IV patients excluded from trial
        - flag: true
          reason: Age within eligible range
      failedCriteria:
        - comorbidity
        - priorTreatment
        - medication
        - stage
      isEligible: false
    performance: "[perf]"
    traceData:
      decisionSummary:
        result: "\"Patient is not eligible for clinical trial\""
      eligibilityReasons:
        result: "[{\"reason\":\"Diagnosis matches trial criteria\",\"flag\":true},{\"reason\":\"Excluded comorbidity present\",\"flag\":false},{\"flag\":false,\"reason\":\"Too many prior treatments\"},{\"flag\":false,\"reason\":\"Patient taking excluded medications\"},{\"reason\":\"Stage IV patients excluded from trial\",\"flag\":false},{\"reason\":\"Age within eligible range\",\"flag\":true}]"
      failedCriteria:
        result: "[\"comorbidity\",\"priorTreatment\",\"medication\",\"stage\"]"
      isEligible:
        result: "false"
  inputNode:
    id: inputNode
    input: ~
    name: patient
    order:
      "$serde_json::private::Number": "0"
    output:
      patient:
        age:
          "$serde_json::private::Number": "68"
        comorbidities:
          - autoimmune_disease
          - COPD
        currentMedications:
          - immunosuppressants
          - albuterol
          - omeprazole
        diagnosis: lung_cancer
        diseaseStage: IV
        id: P67890
        lastLabResults:
          creatinine:
            "$serde_json::private::Number": "1.2"
          hgb:
            "$serde_json::private::Number": "10.9"
          plt:
            "$serde_json::private::Number": "150"
          wbc:
            "$serde_json::private::Number": "3.8"
        name: John Smith
        priorTreatments:
          "$serde_json::private::Number": "3"
    performance: "[perf]"
    traceData: ~
  medicationEligibility:
    id: medicationEligibility
    input:
      patient:
        age:
          "$serde_json::private::Number": "68"
        comorbidities:
          - autoimmune_disease
          - COPD
        currentMedications:
          - immunosuppressants
          - albuterol
          - omeprazole
        diagnosis: lung_cancer
        diseaseStage: IV
        id: P67890
        lastLabResults:
          creatinine:
            "$serde_json::private::Number": "1.2"
          hgb:
            "$serde_json::private::Number": "10.9"
          plt:
            "$serde_json::private::Number": "150"
          wbc:
            "$serde_json::private::Number": "3.8"
        name: John Smith
        priorTreatments:
          "$serde_json::private::Number": "3"
    name: medicationEligibility
    order:
      "$serde_json::private::Number": "3"
    output:
      eligibility:
        medication:
          flag: false
          reason: Patient taking excluded medications
      patient:
        age:
          "$serde_json::private::Number": "68"
        comorbidities:
          - autoimmune_disease
          - COPD
        currentMedications:
          - immunosuppressants
          - albuterol
          - omeprazole
        diagnosis: lung_cancer
        diseaseStage: IV
        id: P67890
        lastLabResults:
          creatinine:
            "$serde_json::private::Number": "1.2"
          hgb:
            "$serde_json::private::Number": "10.9"
          plt:
            "$serde_json::private::Number": "150"
          wbc:
            "$serde_json::private::Number": "3.8"
        name: John Smith
        priorTreatments:
          "$serde_json::private::Number": "3"
    performance: "[perf]"
    traceData:
      index:
        "$serde_json::private::Number": "0"
      reference_map:
        "patient.currentMedications ?? []":
          - immunosuppressants
          - albuterol
          - omeprazole
      rule:
        _id: rule1
        "patient.currentMedications ?? [][medications]": "some($, # in ['immunosuppressants', 'anticancer_agents', 'corticosteroids'])"
  priorTreatmentEligibility:
    id: priorTreatmentEligibility
    input:
      patient:
        age:
          "$serde_json::private::Number": "68"
        comorbidities:
          - autoimmune_disease
          - COPD
        currentMedications:
          - immunosuppressants
          - albuterol
          - omeprazole
        diagnosis: lung_cancer
        diseaseStage: IV
        id: P67890
        lastLabResults:
          creatinine:
            "$serde_json::private::Number": "1.2"
          hgb:
            "$serde_json::private::Number": "10.9"
          plt:
            "$serde_json::private::Number": "150"
          wbc:
            "$serde_json::private::Number": "3.8"
        name: John Smith
        priorTreatments:
          "$serde_json::private::Number": "3"
    name: priorTreatmentEligibility
    order:
      "$serde_json::private::Number": "5"
    output:
      eligibility:
        priorTreatment:
          flag: false
          reason: Too many prior treatments
      patient:
        age:
          "$serde_json::private::Number": "68"
        comorbidities:
          - autoimmune_disease
          - COPD
        currentMedications:
          - immunosuppressants
          - albuterol
          - omeprazole
        diagnosis: lung_cancer
        diseaseStage: IV
        id: P67890
        lastLabResults:
          creatinine:
            "$serde_json::private::Number": "1.2"
          hgb:
            "$serde_json::private::Number": "10.9"
          plt:
            "$serde_json::private::Number": "150"
          wbc:
            "$serde_json::private::Number": "3.8"
        name: John Smith
        priorTreatments:
          "$serde_json::private::Number": "3"
    performance: "[perf]"
    traceData:
      index:
        "$serde_json::private::Number": "0"
      reference_map:
        patient.priorTreatments:
          "$serde_json::private::Number": "3"
      rule:
        _id: rule1
        "patient.priorTreatments[priorTreatments]": "> 2"
